# image-organizer

./: .gitignore  README.md  pyproject.toml
cli/: MyNamespace.py  __main__.py
cli/actions/: accessible_directory.py  directory_or_glob.py
image_organizer/: __init__.py  main_window.py
image_organizer/db/: __init__.py  engine.py
image_organizer/db/models/: image.py  tag.py
image_organizer/errors/: __init__.py
image_organizer/image_utils/: find_images.py  load_and_resize.py  pixmap_cache.py
image_organizer/main_window/: __init__.py
image_organizer/pixmap_cache/: __init__.py  cache_entry.py
image_organizer/utils/: format_strings.py  into_callback.py  loading_cursor.py  wait_cursor.py
image_organizer/widgets/: gallery_viewer.py  image_viewer.py
image_organizer/widgets/controlled_gallery/: __init__.py  control_buttons_group.py  tags_list.py
image_organizer/widgets/folders_list/: __init__.py  paths_list.py
image_organizer/widgets/gallery/: __init__.py  gallery_image.py
image_organizer/widgets/gallery_viewer/: __init__.py  image_viewer.py
image_organizer/widgets/taggable_folder_viewer/: __init__.py  control_buttons_group.py  tags_list.py
image_organizer/widgets/viewer/: __init__.py  action_buttons_group.py  tags_list.py
ui/entry_list/: __init__.py  list_with_menu.py
ui/folder_viewer/: __init__.py  image_viewer.py  info_labels.py  movement_buttonts.py
ui/list_with_menu/: __init__.py  list_with_remove.py
ui/my_splitter/: __init__.py
ui/path_utils/: absolute_paths.py
ui/paths_list/: __init__.py
(+4 files in other folders)
