[tool.poetry]
name = "photo-organizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "image_organizer" }]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.5.1"
pillow = "^9.5.0"
send2trash = "^1.8.2"
sqlalchemy = "^2.0.18"

[tool.isort]
profile = "black"

[tool.ruff]
select = ['E', 'F', 'W', 'I', 'N', 'UP', 'E', 'W']
ignore = ['N815', 'N802']

[tool.ruff.per-file-ignores]
'image_organizer/db/__init__.py' = ["E402"]

[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingImports = true
reportMissingTypeStubs = false

strictListInference = true
stringDictionaryInference = true
strictSetInference = true
reportUnusedImport = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
